fix css on safari

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,199 +42,8 @@
 }
 
 #deals_mobile .deals_mobile__stores .deals_mobile__logo img {
-  width: 100%;
   height: 100%;
-}
-
-#deals_mobile .deals_mobile__stores .active {
-  opacity: 1;
-  -webkit-transform: scale(1.35);
-          transform: scale(1.35);
-}
-
-#deals_mobile .deals_mobile__list-container {
-  position: relative;
-  background-color: #eaf1f8;
-  padding: 20px 0;
-  min-height: 510px;
-}
-
-#deals_mobile .deals_mobile__list-container .deals__loader-container {
-  display: none;
-}
-
-#deals_mobile .deals_mobile__list-container .deals__loader-container.active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 407px;
-}
-
-#deals_mobile .deals_mobile__list-container .loader {
-  display: block;
-  border: 7px solid #c8c5c5;
-  border-top: 7px solid #ffffff;
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
-  -webkit-animation: spin 1s linear infinite;
-  animation: spin 1s linear infinite;
-  /* Safari */
-}
-
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-#deals_mobile .deals_mobile__list-container ul {
-  -webkit-transition: opacity 0.5s ease-in-out;
-  transition: opacity 0.5s ease-in-out;
-  opacity: 0;
-  height: 0;
-  overflow: hidden;
-  list-style: none;
-}
-
-#deals_mobile .deals_mobile__list-container ul.active {
-  opacity: 1;
-  height: auto;
-}
-
-#deals_mobile .deals_mobile__list-container ul.active .element a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 20px;
-  text-decoration: none;
-  color: #000000;
-}
-
-#deals_mobile .deals_mobile__list-container ul.active .element a .element__title {
-  -webkit-box-flex: 5;
-      -ms-flex-positive: 5;
-          flex-grow: 5;
-  margin: 0 5.5%;
-  font-size: 18px;
-}
-
-#deals_mobile .deals_mobile__list-container ul.active .element a .element__price {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  text-align: right;
-  text-decoration: line-through;
-  margin-right: 3%;
-}
-
-#deals_mobile .deals_mobile__list-container ul.active .element a .element__deal {
-  width: 78px;
-  background: #37cd8f;
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  margin-right: 5.5%;
-  padding: 7px 10px 7px 8px;
-  border-radius: 20px;
-}
-
-#deals_mobile .deals_mobile__list-container ul a {
-  text-decoration: none;
-  color: #000;
-}
-
-#deals_mobile .deals_mobile__list-container ul a button {
-  display: block;
-  margin: auto;
-  font-size: 16px;
-  padding: 0.6rem 1rem;
-  border: 1px solid #000000;
-  border-radius: 2rem;
-  background-color: transparent;
-  color: #000000;
-  cursor: pointer;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-#deals_mobile .deals_mobile__list-container ul a button:hover {
-  background-color: #ffffff;
-}
-
-#deals_mobile {
-  padding: 10px 0;
-}
-
-#deals_mobile .deals_mobile__title {
-  margin: 10px 5.5%;
-  font-size: 28px;
-  line-height: 1.4;
-  font-weight: normal;
-  color: #29246a;
-}
-
-#deals_mobile .deals_mobile__title a {
-  color: #29246a;
-}
-
-#deals_mobile .deals_mobile__stores {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  margin: 70px 0 50px;
-}
-
-#deals_mobile .deals_mobile__stores .deals_mobile__logo {
-  height: 55px;
   width: auto;
-  opacity: 0.6;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-#deals_mobile .deals_mobile__stores .deals_mobile__logo:hover {
-  cursor: pointer;
-  opacity: 1;
-}
-
-#deals_mobile .deals_mobile__stores .deals_mobile__logo img {
-  width: 100%;
-  height: 100%;
 }
 
 #deals_mobile .deals_mobile__stores .active {
